compiler/weave_syntax/tests/data/syntax/namespace/ns0002.error
error: Expected '[token:identifier]'
        --> <source>:2:1
         |
       2 | 
         | ^
error: Expected '{'
        --> <source>:2:1
         |
       2 | 
         | ^
error: Expected '}'
        --> <source>:2:1
         |
       2 | 
         | ^
